UCS: Unknown FileUpload Deletion Returns 404 (GSI-2407) (#193)
* UCS: Return 404 on FileUpload Delete

* Bump monorepo version to 14.0.0 and UCS version to 13.0.0
